--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,7 +87,7 @@ dependencies {
     implementation supportDependencies.preference
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
     implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
-    implementation('com.mikepenz:materialdrawer:6.0.8@aar') {
+    implementation('com.mikepenz:materialdrawer:6.0.8') {
         transitive = true
     }
     implementation 'com.pnikosis:materialish-progress:1.7'
@@ -96,27 +96,27 @@ dependencies {
         exclude group: 'com.android.support', module: 'appcompat-v7'
         exclude group: 'com.android.support', module: 'design'
     }
-    implementation 'com.github.florent37:expansionpanel:1.1.1'
-    implementation 'commons-io:commons-io:2.6'
+    implementation 'com.github.florent37:expansionpanel:1.2.4'
+    implementation 'commons-io:commons-io:2.11.0'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.activity:activity:1.2.0-alpha08'
-    implementation 'androidx.fragment:fragment:1.3.0-alpha08'
-    implementation 'net.lingala.zip4j:zip4j:1.3.2'
-    implementation 'com.github.daniel-stoneuk:material-about-library:2.2.4'
+    implementation 'androidx.activity:activity:1.2.4'
+    implementation 'androidx.fragment:fragment:1.3.6'
+    implementation 'net.lingala.zip4j:zip4j:1.3.3'
+    implementation 'com.github.daniel-stoneuk:material-about-library:3.1.2'
     implementation 'com.github.apl-devs:appintro:v4.2.3'
     implementation 'com.andrognito.pinlockview:pinlockview:2.1.0'
     implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
     implementation 'com.multidots:fingerprint-auth:1.0.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     implementation 'com.github.ronaldsmartin:Material-ViewPagerIndicator:1.0.4'
-    implementation 'com.jaredrummler:material-spinner:1.2.5'
-    implementation 'org.dmfs:lib-recur:0.11.1'
-    implementation 'com.opencsv:opencsv:4.4'
+    implementation 'com.jaredrummler:material-spinner:1.3.1'
+    implementation 'org.dmfs:lib-recur:0.12.2'
+    implementation 'com.opencsv:opencsv:4.6'
     implementation 'net.sourceforge.jexcelapi:jxl:2.6.12'
-    implementation 'com.itextpdf:itextpdf:5.5.13'
-    implementation 'me.weishu:free_reflection:2.2.0'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.itextpdf:itextpdf:5.5.13.3'
+    implementation 'me.weishu:free_reflection:3.0.1'
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
     // google play dependencies
     proprietaryImplementation('com.dropbox.core:dropbox-core-sdk:3.0.8')
     proprietaryImplementation googlePlayServices.auth
@@ -127,12 +127,12 @@ dependencies {
     // floss dependencies
     osmImplementation 'org.osmdroid:osmdroid-android:6.1.1'
     // test dependencies (local tests)
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:3.6.28'
     // android test dependencies (on-device tests)
-    androidTestImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:core:1.2.0'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test:rules:1.2.0'
-    androidTestUtil "androidx.test:orchestrator:1.2.0"
+    androidTestImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:core:1.4.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestUtil "androidx.test:orchestrator:1.4.1"
 }
