--- a/gradle.properties
+++ b/gradle.properties
@@ -28,12 +28,14 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
-
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
+android.useAndroidX=true
+android.enableJetifier=true
+android.enableR8=true
+android.enableR8.fullMode=true
 
 # When building a release, it may be useful to specify the api-key to use inside the project.
 # Securing your API keys is an essential step and you should always do it: never commit your
@@ -47,5 +49,3 @@ org.gradle.jvmargs=-Xmx1536m
 ApiKey_Google="INSERT_API_KEY_HERE"
 ApiKey_Dropbox="INSERT_API_KEY_HERE"
 ApiKey_OpenExchangeRates="INSERT_API_KEY_HERE"
-android.useAndroidX=true
-android.enableJetifier=true
