--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+    compileSdkVersion 33
     defaultConfig {
         applicationId "com.oriondev.moneywallet"
-        minSdkVersion 21
-        targetSdkVersion 29
+        minSdkVersion 23
+        targetSdkVersion 33
         versionCode 75
         versionName "4.0.5.10"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -39,8 +43,14 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            // optimize release
+            debuggable false
+            jniDebuggable false
+            minifyEnabled true
+            shrinkResources true
+            zipAlignEnabled true
+
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
             applicationIdSuffix ".dev"
@@ -68,6 +78,7 @@ android {
     useLibrary 'android.test.runner'
     useLibrary 'android.test.base'
     useLibrary 'android.test.mock'
+    namespace 'com.oriondev.moneywallet'
 }
 
 configurations {
@@ -85,9 +96,10 @@ dependencies {
     implementation supportDependencies.annotations
     implementation supportDependencies.design
     implementation supportDependencies.preference
+    implementation supportDependencies.workruntime
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
     implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
-    implementation('com.mikepenz:materialdrawer:6.0.8@aar') {
+    implementation('com.mikepenz:materialdrawer:6.0.9@aar') {
         transitive = true
     }
     implementation 'com.pnikosis:materialish-progress:1.7'
@@ -96,43 +108,42 @@ dependencies {
         exclude group: 'com.android.support', module: 'appcompat-v7'
         exclude group: 'com.android.support', module: 'design'
     }
-    implementation 'com.github.florent37:expansionpanel:1.1.1'
-    implementation 'commons-io:commons-io:2.6'
-    implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.activity:activity:1.2.0-alpha08'
-    implementation 'androidx.fragment:fragment:1.3.0-alpha08'
-    implementation 'net.lingala.zip4j:zip4j:1.3.2'
-    implementation 'com.github.daniel-stoneuk:material-about-library:2.2.4'
+    implementation 'com.github.florent37:expansionpanel:1.2.4'
+    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'androidx.activity:activity:1.7.0-alpha01'
+    implementation 'androidx.fragment:fragment:1.6.0-alpha03'
+    implementation 'net.lingala.zip4j:zip4j:1.3.3'
+    implementation 'com.github.daniel-stoneuk:material-about-library:3.1.2'
     implementation 'com.github.apl-devs:appintro:v4.2.3'
     implementation 'com.andrognito.pinlockview:pinlockview:2.1.0'
     implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
     implementation 'com.multidots:fingerprint-auth:1.0.1'
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.github.ronaldsmartin:Material-ViewPagerIndicator:1.0.4'
-    implementation 'com.jaredrummler:material-spinner:1.2.5'
-    implementation 'org.dmfs:lib-recur:0.11.1'
-    implementation 'com.opencsv:opencsv:4.4'
+    implementation 'com.jaredrummler:material-spinner:1.3.1'
+    implementation 'org.dmfs:lib-recur:0.12.2'
+    implementation 'com.opencsv:opencsv:4.6'
     implementation 'net.sourceforge.jexcelapi:jxl:2.6.12'
-    implementation 'com.itextpdf:itextpdf:5.5.13'
-    implementation 'me.weishu:free_reflection:2.2.0'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.itextpdf:itextpdf:5.5.13.3'
+    implementation 'me.weishu:free_reflection:3.0.1'
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     // google play dependencies
-    proprietaryImplementation('com.dropbox.core:dropbox-core-sdk:3.0.8')
+    proprietaryImplementation('com.dropbox.core:dropbox-core-sdk:3.2.0')
     proprietaryImplementation googlePlayServices.auth
     proprietaryImplementation googlePlayServices.signin
     proprietaryImplementation googlePlayServices.drive
     // google-map dependencies
     gmapImplementation googlePlayServices.places
     // floss dependencies
-    osmImplementation 'org.osmdroid:osmdroid-android:6.1.1'
+    osmImplementation 'org.osmdroid:osmdroid-android:6.1.14'
     // test dependencies (local tests)
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:3.6.28'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
     // android test dependencies (on-device tests)
-    androidTestImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:core:1.2.0'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test:rules:1.2.0'
-    androidTestUtil "androidx.test:orchestrator:1.2.0"
+    androidTestImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:core:1.4.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestUtil "androidx.test:orchestrator:1.4.1"
 }
