--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,5 +23,12 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
-    - name: Build Debug APK
-      run: ./gradlew assembleDebug
+    - name: Build & Publish Debug APK
+      # You may pin to the exact commit or the version.
+      # uses: ShaunLWM/action-release-debugapk@d804d8fbf2982783eeffb6fa9e12bf37beb519bd
+      uses: ShaunLWM/action-release-debugapk@0.0.7
+      with:
+        # Github secret token to allow automated publishing of APK to release.
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
+        # Github repository branch name.
+        REPO_BRANCH: master
