--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,9 +3,11 @@ name: Android CI
 on:
   push:
     branches: [ "master" ]
+    tags:
+      - '*'
   pull_request:
     branches: [ "master" ]
-
+    
 jobs:
   build:
 
@@ -23,12 +25,10 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
-    - name: Build & Publish Debug APK
-      # You may pin to the exact commit or the version.
-      # uses: ShaunLWM/action-release-debugapk@d804d8fbf2982783eeffb6fa9e12bf37beb519bd
-      uses: ShaunLWM/action-release-debugapk@0.0.7
-      with:
-        # Github secret token to allow automated publishing of APK to release.
-        GITHUB_TOKEN: ${{ secrets.TOKEN }}
-        # Github repository branch name.
-        REPO_BRANCH: master
+    - name: Build Release APK
+      run: ./gradlew assembleDebug
+    - name: Releasing using Hub
+      uses: kyze8439690/action-release-releaseapk@master
+      env:
+       GITHUB_TOKEN: ${{ secrets.TOKEN }}
+       APP_FOLDER: app
