--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,8 +3,6 @@ name: Android CI
 on:
   push:
     branches: [ "master" ]
-    tags:
-      - '*'
   pull_request:
     branches: [ "master" ]
     
@@ -25,10 +23,15 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
-    - name: Build Release APK
-      run: ./gradlew assembleDebug
-    - name: Releasing using Hub
-      uses: kyze8439690/action-release-releaseapk@master
+    - name: Build debug apk
+      run: ./gradlew clean assembleDebug
+
+    - name: Create release and upload apk
+      uses: underwindfall/create-release-with-debugapk@v2.0.0
       env:
-       GITHUB_TOKEN: ${{ secrets.TOKEN }}
-       APP_FOLDER: app
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+      with:
+        tag_name: v1.0.0
+        asset_path: app/build/outputs/apk/debug/app-debug.apk
+        asset_name: moneywallet_android13.apk
+        asset_content_type: application/zip
