--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,26 +12,41 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: set up JDK 11
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+#    - name: Build with Gradle
+#      run: ./gradlew build
     - name: Build debug apk
       run: ./gradlew clean assembleDebug
-
-    - name: Create release and upload apk
-      uses: underwindfall/create-release-with-debugapk@v2.0.0
-      env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+      
+    - name: Upload APK
+      uses: actions/upload-artifact@v1
       with:
-        tag_name: v1.0.0
+        name: apk
+        path: app/build/outputs/apk/debug/app-debug.apk
+        
+    - name: Get the version
+      id: get_version
+      run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+      
+    - name: Create Release and Upload debug APK
+      uses: underwindfall/create-release-with-debugapk@v1.2.4
+      env: 
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
+      with:
+        tag_name: ${{ steps.get_version.outputs.VERSION }}
+        release_name: Release ${{ steps.get_version.outputs.VERSION }}
         asset_path: app/build/outputs/apk/debug/app-debug.apk
-        asset_name: moneywallet_android13.apk
+        asset_name: moneywallet-debug_android13.apk
         asset_content_type: application/zip
+        draft: false
+        prerelease: false
+
+    
