--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,8 +3,11 @@ name: Android CI
 on:
   push:
     branches: [ "master" ]
+    tags:
+      - "v*"
   pull_request:
     branches: [ "master" ]
+      
     
 jobs:
   build:
@@ -27,7 +30,7 @@ jobs:
       run: ./gradlew clean assembleDebug
       
     - name: Upload APK
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v3
       with:
         name: apk
         path: app/build/outputs/apk/debug/app-debug.apk
@@ -37,7 +40,7 @@ jobs:
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       
     - name: Create Release and Upload debug APK
-      uses: underwindfall/create-release-with-debugapk@v1.2.4
+      uses: underwindfall/create-release-with-debugapk@v2.0.0
       env: 
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
       with:
